QXGEdit - Qt XG Editor
----------------------

SVN TRUNK

- Uservoice name preset drop-down list is now sorted.

- MIDI note names and their respective octave numbers are now
  compliant with the ISO standard where middle C (60) is now C4
  (was C3).

- Added include <unistd.h> to shut up gcc 4.7 build failures.

- Make(ing) -jN parallel builds now available for the masses.

- Updated to latest Skulpture style version 2.4.0.

- Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir.


0.1.1  2011-09-17  Third public release.

- Make sure Uservoice elements are selected only when available.

- Debugging stacktrace now applies to all working threads.

- libX11 is now being added explicitly to the build link phase,
  as seen necessary on some bleeding-edge distros eg. Fedora 13,
  Debian 6.

- Moving from old deprecated Qt3'ish custom event post handling
  into regular asynchronous signal/slot strategy.

- General standard dialog buttons layout is now in place.


0.1.0  2010-04-21  Second public release.

- Initial widget geometry and visibility persistence logic has
  been slightly revised as much to avoid crash failures due to
  wrong main widget hidden state.

- General source tree layout and build configuration change.

- Make build compilation work for gcc >= 4.4.0, by adding some
  missing standard C99 includes.

- LADISH Level 1 support has been added: SIGUSR1 signal trap
  just makes it a shortcut to File/Save.

- Uservoice (QS300) AmpEG Attack, Decay Level 1 and 2 parameters
  now have a bit cleaner, clearer out-of-the-box default values.

- Uservoice (QS300) preset combo-box drop-down list now gets its
  current item selection set alright.

- Global configuration state is now explicitly saved/committed to
  disk when Options dialog changes are accepted and applied.

- Variation part parameter is now a drop-down combo-box.

- New reset button for reverb, chorus and variation parameters.
