@@ -7,6 +7,9 @@ configure:	 Makefile.in configure.ac
 
 clean:
 	@if [ -f Makefile ]; then make clean; fi || true
-	@rm -rvf Makefile configure config.* src/.ui src/.obj src/.moc
-	@rm -rvf src/Makefile src/config.* src/*.pri src/*.desktop
+	@rm -rvf Makefile configure config.*
+	@rm -rvf src/.ui src/.obj src/.moc
+	@rm -rvf src/config.* src/*.pri src/*.mak src/*.desktop
+	@rm -rvf skulpture/.ui skulpture/.obj skulpture/.moc
+	@rm -rvf skulpture/*.pri skulpture/*.mak
 	@rm -rvf *.cache *.log *.status *.spec
