@@ -7,4 +7,4 @@ isEmpty( ISQT4 ) {
 }
 
 TEMPLATE = subdirs
-SUBDIRS = src
+SUBDIRS = src skulpture
