@@ -1,7 +1,12 @@
-TEMPLATE = lib
-LANGUAGE = C++
+# skulpture.pro
+#
+NAME = skulpturestyle
 
-CONFIG	+= plugin warn_on release
+TARGET = $${NAME}
+TEMPLATE = lib
+CONFIG	+= shared plugin
+
+include(skulpture.pri)
 
 HEADERS	+= \
 	sk_factory.h \
@@ -10,11 +15,37 @@ HEADERS	+= \
 
 SOURCES	+= skulpture.cpp
 
-TARGET   = skulpturestyle
 
-win32 {
-	debug:DESTDIR = ../win32/debug/styles
-	release:DESTDIR = ../win32/release/styles
-} else {
-	DESTDIR = ../styles
+unix {
+
+	# variables
+	OBJECTS_DIR = .obj
+	MOC_DIR     = .moc
+	UI_DIR      = .ui
+
+	isEmpty(PREFIX) {
+		PREFIX = /usr/local
+	}
+
+	TARGET_ARCH = $$system(uname -m)
+	contains(TARGET_ARCH, x86_64) {
+		TARGET_PREFIX = $${PREFIX}/lib64
+	} else {
+		TARGET_PREFIX = $${PREFIX}/lib
+	}
+
+	TARGET_PATH = $${TARGET_PREFIX}/qt4/plugins/styles
+
+	isEmpty(QMAKE_EXTENSION_SHLIB) {
+		QMAKE_EXTENSION_SHLIB = so
+	}
+
+	TARGET_FILES = lib$${TARGET}.$${QMAKE_EXTENSION_SHLIB}
+
+	INSTALLS += target
+
+	target.path  = $${TARGET_PATH}
+	target.files = $${TARGET_FILES}
+
+	QMAKE_CLEAN += $${TARGET_FILES}
 }
