@@ -83,8 +83,13 @@ unix {
 
 	BINDIR = $$PREFIX/bin
 	DATADIR = $$PREFIX/share
+	LOCALEDIR = $(localedir)
 
 	DEFINES += DATADIR=\"$$DATADIR\"
+
+	!isEmpty(LOCALEDIR) {
+		DEFINES += LOCALEDIR=\"$$LOCALEDIR\"
+	}
 
 	# make install
 	INSTALLS += target desktop icon
